# RL_Rover

./: CMakeLists.txt  LICENSE  README.md  package.xml
description/: 4wd.urdf.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  rover.urdf.xacro  wheel.urdf.xacro
launch/: description.launch.py  gzsim.launch.py
src/: publisher.py
